--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <!-- Swiper -->
                 <div class="swiper-container swiper-slider swiper-style-2" data-loop="false" data-autoplay="5500" data-simulate-touch="false" data-slide-effect="slide" data-direction="vertical">
                   <div class="swiper-wrapper">
-                    <div class="swiper-slide" data-slide-bg="images/slide-01.jpg">
+                    <div class="swiper-slide" data-slide-bg="images/banner.png">
                       <div class="swiper-slide-caption">
                         <div class="shell text-sm-left">
                           <h1 data-caption-animate="slideInDown" data-caption-delay="100">Расширьте границы вашего магазина</h1>
@@ -102,7 +102,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="swiper-slide" data-slide-bg="images/slide-02.jpg">
+                    <div class="swiper-slide" data-slide-bg="images/banner2.png">
                       <div class="swiper-slide-caption">
                         <div class="shell text-sm-left">
                           <h1 data-caption-animate="slideInDown" data-caption-delay="100">Доступные покупки без забот</h1>
@@ -113,7 +113,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="swiper-slide" data-slide-bg="images/slide-03.jpg">
+                    <div class="swiper-slide" data-slide-bg="images/banner3.png">
                       <div class="swiper-slide-caption">
                         <div class="shell text-sm-left">
                           <h1 data-caption-animate="slideInDown" data-caption-delay="100">Реализуйте свои желания с нами</h1>
@@ -131,36 +131,36 @@
             </div>
             <div class="cell-lg-4 cell-xl-3 reveal-lg-flex">
               <div class="hotel-booking-form">
-                <h3>Форма заявки</h3>
+                <h3 style="color:white">Форма заявки</h3>
                 <!-- RD Mailform-->
                 <form  method="post" action="https://formsubmit.co/fayzee.uz@gmail.com">
                   <div class="range range-sm-bottom spacing-20">
                     <div class="cell-lg-12 cell-md-4">
-                      <p class="text-uppercase">имя и фамилия</p>
+                      <p class="text-uppercase" style="color:white">имя и фамилия</p>
                       <div class="form-wrap">
                         <input class="form-input"  type="text" name="fullname" data-constraints="@Required" placeholder="Введите ваше полное имя">
                       </div>
                     </div>
                     <div class="cell-lg-12 cell-md-4">
-                      <p class="text-uppercase">Название вашего магазина</p>
+                      <p class="text-uppercase" style="color:white">Название вашего магазина</p>
                       <div class="form-wrap">
                         <input class="form-input"  type="text" name="company" data-constraints="@Required" placeholder="Введите название вашего магазина">
                       </div>
                     </div>
                     <div class="cell-lg-12 cell-md-4">
-                      <p class="text-uppercase">Телефоный номер</p>
+                      <p class="text-uppercase" style="color:white">Телефоный номер</p>
                       <div class="form-wrap">
                         <input class="form-input"  type="text" name="telephone" data-constraints="@Required" placeholder="Введите свой телефонный номер">
                       </div>
                     </div>
                     <div class="cell-lg-12 cell-md-4">
-                      <p class="text-uppercase">Email адрес</p>
+                      <p class="text-uppercase" style="color:white">Email адрес</p>
                       <div class="form-wrap">
                         <input class="form-input"  type="text" name="email" data-constraints="@Required" placeholder="Введите email адрес">
                       </div>
                     </div>
                     <div class="cell-lg-12 cell-md-4">
-                      <button class="button button-primary button-square button-block button-effect-ujarak" type="submit"><span>Оставить заявку</span></button>
+                      <button class="button  button-square button-block button-effect-ujarak" type="submit"><span>Оставить заявку</span></button>
                     </div>
                   </div>
                 </form>
@@ -176,9 +176,8 @@
           <div class="range range-50 range-xs-center overflow-hidden">
             <div class="cell-sm-10 cell-md-8 cell-lg-7 wow fadeInUp" data-wow-delay=".1s">
               <div class="post-video post-video-border">
-                <div class="post-video__image"><img src="images/video-bg-1020x525.jpg" alt="" width="1020" height="525"/>
+                <div class="post-video__image"><img src="images/about.png" alt="" width="1020" height="525"/>
                 </div>
-                <div class="post-video__body"><a class="link-control post-video__control" data-lightgallery="item" href="https://www.youtube.com/watch?v=I5FlP07kdvM"></a></div>
               </div>
             </div>
             <div class="cell-sm-10 cell-md-8 cell-lg-5 reveal-flex wow fadeInUp" data-wow-delay=".3s">
@@ -219,7 +218,7 @@
             </div>
             <div class="cell-sm-6">
               <div class="box-outline box-outline__mod-1">
-                <figure><img src="images/services-05-546x516.jpg" alt="" width="546" height="516"/>
+                <figure><img src="images/services.png" alt="" width="546" height="516"/>
                 </figure>
               </div>
             </div>
