--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Главная - BUYURUB</title>
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <title>Главная - BUYSENSE</title>
+    <meta content="BUYSENSE Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и клиентами в области рассрочки товаров." name="description">
+    <meta content="BUYSENSE - Ведущая узбекская компания в области рассрочки товаров." property="og:title">
+    <meta content="BUYSENSE Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и клиентами в области рассрочки товаров." property="og:description">
+    <meta content="../images/og.png" property="og:image">
+    <meta content="BUYSENSE - Ведущая узбекская компания в области рассрочки товаров." property="twitter:title">
+    <meta content="BUYSENSE Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и клиентами в области рассрочки товаров." property="twitter:description">
+    <meta content="images/og.png" property="twitter:image">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
-  </head>
+    </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <!-- Page Header-->
       <header class="page-header" style="padding-bottom: 24px">
         <!-- RD Navbar-->
@@ -26,7 +31,7 @@
               <div class="rd-navbar-top-panel-inner">
                 <div class="left-side">
                   <div class="group">
-                    <ul class="list-inline">
+                    <ul style="font-size: 25px;" class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" href="#"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" href="#"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li>
@@ -184,7 +189,7 @@
               <div class="bg-primary section-wrap-content-var-1">
                 <div class="section-wrap-content-var-1-inner">
                   <h2>О нас</h2>
-                  <p>Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и 
+                  <p style="text-align: justify;">Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и 
                     клиентами в области рассрочки товаров. Наша цель - создать удобную и выгодную платформу, 
                     которая помогает владельцам магазинов привлекать больше клиентов и увеличивать объем продаж, 
                     а клиентам - приобретать товары в рассрочку без лишних сложностей.</p>
@@ -210,11 +215,11 @@
         <div class="shell">
           <div class="range range-50 range-md-justify range-sm-middle">
             <div class="cell-sm-6 cell-md-5">
-              <h3>Наши сервисы</h3>
-              <p style="color:black"><b>Расширение клиентской базы:</b> Мы предлагаем владельцам магазинов уникальную возможность привлечь новых клиентов, предоставляя продажу товаров в рассрочку. Наша компания рекламирует и продвигает ваши товары среди потенциальных покупателей, что помогает вам увеличить продажи.</p>
-              <p style="color:black"><b>Безопасная и гарантированная оплата:</b> Мы полностью оплачиваем товары, приобретаемые в рассрочку, сразу после продажи. Владельцы магазинов получают полную сумму за проданные товары, минимизируя риски и необходимость долгосрочного ожидания оплаты от клиентов.</p>
-              <p style="color:black"><b>Маркетинговая поддержка:</b> Мы оказываем маркетинговую поддержку владельцам магазинов, помогая привлекать больше клиентов и увеличивать их лояльность. Мы разрабатываем рекламные акции, проводим мероприятия и использование социальных медиа для продвижения ваших товаров и увеличения их видимости на рынке.</p>             
-              <p style="color:black"><b>Профессиональное сотрудничество:</b> Мы ценим долгосрочные партнерские отношения и стремимся к взаимовыгодному сотрудничеству с владельцами магазинов. Наша команда предоставляет профессиональную поддержку, консультации и оперативное решение всех вопросов, связанных с рассрочкой и продажей товаров.</p>
+              <h3 style="color:#552FE8"><b>Наши сервисы</b></h3>
+              <p style="color:black; text-align: justify;" ><b>Расширение клиентской базы:</b> Мы предлагаем владельцам магазинов уникальную возможность привлечь новых клиентов, предоставляя продажу товаров в рассрочку. Наша компания рекламирует и продвигает ваши товары среди потенциальных покупателей, что помогает вам увеличить продажи.</p>
+              <p style="color:black; text-align: justify;"><b>Безопасная и гарантированная оплата:</b> Мы полностью оплачиваем товары, приобретаемые в рассрочку, сразу после продажи. Владельцы магазинов получают полную сумму за проданные товары, минимизируя риски и необходимость долгосрочного ожидания оплаты от клиентов.</p>
+              <p style="color:black; text-align: justify;"><b>Маркетинговая поддержка:</b> Мы оказываем маркетинговую поддержку владельцам магазинов, помогая привлекать больше клиентов и увеличивать их лояльность. Мы разрабатываем рекламные акции, проводим мероприятия и использование социальных медиа для продвижения ваших товаров и увеличения их видимости на рынке.</p>             
+              <!--<p style="color:black"><b>Профессиональное сотрудничество:</b> Мы ценим долгосрочные партнерские отношения и стремимся к взаимовыгодному сотрудничеству с владельцами магазинов. Наша команда предоставляет профессиональную поддержку, консультации и оперативное решение всех вопросов, связанных с рассрочкой и продажей товаров.</p>-->
             </div>
             <div class="cell-sm-6">
               <div class="box-outline box-outline__mod-1">
@@ -269,14 +274,13 @@
       </section>-->
 
       <!-- Blog-->
-      <section class="section section-sm bg-white text-center text-sm-left">
+      <!--<section class="section section-sm bg-white text-center text-sm-left">
         <div class="shell-wide">
-          <h3>Блог и Новости</h3>
+          <h3 style="color:#552FE8">Блог и Новости</h3>
           <hr>
-          <!-- Owl Carousel-->
           <div class="owl-carousel owl-carousel-stagePadding" data-items="1" data-sm-items="2" data-xl-items="3" data-dots="false" data-nav="true" data-stage-padding="0" data-lg-stage-padding="100" data-xl-stage-padding="0" data-loop="true" data-margin="30" data-mouse-drag="false" data-nav-class="[&quot;owl-button-prev fl-budicons-free-left161&quot;,&quot;owl-button-next  fl-budicons-free-right163&quot;]">
             <div class="post-box post-box-minimal post-box-horizontal wow fadeInUp" data-wow-delay=".1s"><a class="post-box-image" href="">
-                <figure><img src="images/layout-2-blog-01-460x369.jpg" alt="" width="460" height="369"/>
+                <figure><img src="images/gallery.jpg" alt="" width="460px" height="369px"/>
                 </figure></a>
               <div class="post-box-minimal-caption">
                 <div class="post-box-minimal-caption-inner">
@@ -288,7 +292,7 @@
               </div>
             </div>
             <div class="post-box post-box-minimal post-box-horizontal wow fadeInUp" data-wow-delay=".2s"><a class="post-box-image" href="">
-                <figure><img src="images/layout-2-blog-02-460x369.jpg" alt="" width="460" height="369"/>
+                <figure><img src="images/gallery.jpg" alt="" width="460" height="369"/>
                 </figure></a>
               <div class="post-box-minimal-caption">
                 <div class="post-box-minimal-caption-inner">
@@ -300,7 +304,7 @@
               </div>
             </div>
             <div class="post-box post-box-minimal post-box-horizontal wow fadeInUp" data-wow-delay=".3s"><a class="post-box-image" href="">
-                <figure><img src="images/layout-2-blog-03-460x369.jpg" alt="" width="460" height="369"/>
+                <figure><img src="images/gallery.jpg" alt="" width="460" height="369"/>
                 </figure></a>
               <div class="post-box-minimal-caption">
                 <div class="post-box-minimal-caption-inner">
@@ -313,7 +317,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
 
       <!-- Page Footer-->
       <footer class="page-footer text-left text-sm-left">
