--- a/contacts.html
+++ b/contacts.html
@@ -3,21 +3,18 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Контакты - BUYURUB</title>
+    <title>Контакты - BUYSENSE</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
-  </head>
+    </head>
   <body>
-    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
-     
     <!-- Page Header-->
       <header class="page-header" style="padding-bottom: 24px">
         <!-- RD Navbar-->
@@ -27,7 +24,7 @@
               <div class="rd-navbar-top-panel-inner">
                 <div class="left-side">
                   <div class="group">
-                    <ul class="list-inline">
+                    <ul style="font-size: 25px;" class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" href="#"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" href="#"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li>
@@ -88,7 +85,7 @@
           <div class="shell shell-fluid">
             <div class="range range-xs-center">
               <div class="cell-xs-12 cell-xl-11">
-                <h2 class="text-white">Контакты</h2>
+                <h2 class="text-white" style="color: white;">Контакты</h2>
                 <ul class="breadcrumbs-custom">
                   <li><a href="index.html">Главная</a></li>
                   <li class="active">Контакты</li>
