--- a/calculator.html
+++ b/calculator.html
@@ -8,10 +8,10 @@
     <meta content="BUYSENSE Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и клиентами в области рассрочки товаров." name="description">
     <meta content="BUYSENSE - Ведущая узбекская компания в области рассрочки товаров." property="og:title">
     <meta content="BUYSENSE Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и клиентами в области рассрочки товаров." property="og:description">
-    <meta content="../images/og.png" property="og:image">
+    <meta content="images/og.jpg" property="og:image">
     <meta content="BUYSENSE - Ведущая узбекская компания в области рассрочки товаров." property="twitter:title">
     <meta content="BUYSENSE Мы - ведущая узбекская компания, специализирующаяся на предоставлении услуг посредничества между владельцами магазинов и клиентами в области рассрочки товаров." property="twitter:description">
-    <meta content="images/og.png" property="twitter:image">
+    <meta content="images/og.jpg" property="twitter:image">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
