--- a/about-us.html
+++ b/about-us.html
@@ -352,10 +352,10 @@
                   <div class="page-footer-minimal-inner-subscribe">
                     <h4>Подписка</h4>
                     <!-- RD Mailform-->
-                    <form class="rd-mailform rd-mailform-inline form-center" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+                    <form class="rd-mailform rd-mailform-inline form-center" method="post" action="./follow/follow.php">
                       <div class="form-wrap">
-                        <input class="form-input" id="subscribe-email" type="email" name="email" data-constraints="@Email @Required">
-                        <label class="form-label" for="subscribe-email">Email</label>
+                        <input class="form-input" id="subscribe-email" type="email" name="email" placeholder="Введите ваш email" required>
+                        <label class="form-label" for="subscribe-email"></label>
                       </div>
                       <button class="button button-primary-2 button-effect-ujarak button-square" type="submit"><span>Подписаться</span></button>
                     </form>
